--- a/style.css
+++ b/style.css
@@ -448,7 +448,7 @@ body {
 .certification-image,
 .certification-placeholder {
     width: 100%;
-    height: 300px;
+    height: 220px;
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -474,7 +474,7 @@ body {
 }
 
 .certification-content {
-    padding: 20px;
+    padding: 18px 20px;
     background: #f7f4f0;
     flex-grow: 1;
 }
