--- a/style.css
+++ b/style.css
@@ -607,7 +607,7 @@ body {
     }
     
     .contact-grid {
-        grid-template-columns: 1fr;
+        grid-template-columns:  repeat(3, 1fr);
     }
     
     .main-heading {
