--- a/style.css
+++ b/style.css
@@ -463,8 +463,7 @@ body {
 .certification-image img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
-    padding: 10px;
+    object-fit: cover;
 }
 
 .certification-placeholder {
